array.island.Island.scala.error
Erreur de compilation :
Island:2: error: identifier expected but integer literal found.
def island(num:Array[Int]): Int = {y=0;for (i<- 0 to (num.length-2) ){if (num [i]<num[i+1]){y=y+1}};return y
                                                                                        ^Island:2: error: ']' expected but '}' found.
def island(num:Array[Int]): Int = {y=0;for (i<- 0 to (num.length-2) ){if (num [i]<num[i+1]){y=y+1}};return y
                                                                                                  ^